refactoring: change bd-add-remove-button icon from mask to font-icon

--- a/src/app/shared/components/bd-buttons/bd-add-remove-button/bd-add-remove-button.component.html
+++ b/src/app/shared/components/bd-buttons/bd-add-remove-button/bd-add-remove-button.component.html
@@ -3,6 +3,6 @@
   [type]="type"
   class="button">
   <span *ngIf="prefixLabel.length" class="prefix-label text">{{prefixLabel}}</span>
-  <span class="icon"><img [src]="iconUrl" alt="Button"></span>
+  <span class="btn-icon {{iconClass}}"></span>
   <span *ngIf="suffixLabel.length" class="suffix-label text">{{suffixLabel}}</span>
 </button>
