--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -60,7 +60,7 @@ $base-font-size: 16px;
 $default-font-size: 1rem;
 $mini-font-size: .625rem; // 10px
 $tiny-font-size: .75rem;
-$small-font-size: .875rem;
+$small-font-size: .875rem; // 14px
 $large-font-size: 1.25rem;
 $extra-large-font-size: 2rem;
 $top-panel-icon-size: 19px;
