--- a/src/app/shared/components/bd-buttons/bd-add-remove-button/bd-add-remove-button.component.scss
+++ b/src/app/shared/components/bd-buttons/bd-add-remove-button/bd-add-remove-button.component.scss
@@ -1,4 +1,5 @@
 @import '../../../../../assets/styles/variables';
+@import '../../../../../assets/styles/font-icons';
 
 .button {
   display: flex;
@@ -18,17 +19,10 @@
     margin: auto 11px auto 6px;
   }
 
-  .icon {
-    text-align: right;
+  .btn-icon {
+    font-size: $small-font-size;
     margin-right: 11px;
-    mask: none;
     flex: 1;
-
-    img {
-      width: 18px;
-      height: 18px;
-      vertical-align: sub;
-    }
   }
 
   .prefix-label {
