--- a/src/app/shared/components/bd-dropdown/bd-dropdown.component.html
+++ b/src/app/shared/components/bd-dropdown/bd-dropdown.component.html
@@ -13,7 +13,7 @@
         </span>
       </div>
       <div class="bd-dropdown-icon">
-        <i class="fa fa-sort"></i>
+        <i class="icon-dropdown"></i>
       </div>
   </div>
   <div dropdownToggle *ngIf="toogleTemplate">
