--- a/src/app/shared/components/bd-buttons/bd-add-remove-button/bd-add-remove-button.component.scss
+++ b/src/app/shared/components/bd-buttons/bd-add-remove-button/bd-add-remove-button.component.scss
@@ -5,6 +5,7 @@
   display: flex;
   width: 100%;
   height: $form-control-height;
+  padding: 0;
   border: 0;
   text-align: right;
   cursor: pointer;
