rewrite form-expand component (add default font-icons, change styles property)

--- a/src/app/shared/components/bd-form-expand/bd-form-expand.component.html
+++ b/src/app/shared/components/bd-form-expand/bd-form-expand.component.html
@@ -5,9 +5,9 @@
   class="expandable-arrow-wrapper"
   [class.open]="isExpanded">
   <i
-    [class.fa-chevron-up]="isExpanded"
-    [class.fa-chevron-down]="!isExpanded"
-    class="fa expandable-arrow"
+    [class.icon-up-arrow]="isExpanded"
+    [class.icon-down-arrow]="!isExpanded"
+    class="expandable-arrow"
     aria-hidden="true">
   </i>
 </div>
