FSPA-364 change elements sizes from number’s to variables

--- a/src/app/shared/components/bd-button-switch/bd-button-switch.component.scss
+++ b/src/app/shared/components/bd-button-switch/bd-button-switch.component.scss
@@ -13,7 +13,7 @@
     color: $dark-grey;
     font-size: $mini-font-size;
     text-align: right;
-    margin-right: 15px;
+    margin-right: $default-margin;
     text-transform: uppercase;
     align-items: center;
     justify-content: flex-end;
