--- a/src/app/shared/components/bd-file-preview/bd-file-preview.component.scss
+++ b/src/app/shared/components/bd-file-preview/bd-file-preview.component.scss
@@ -67,7 +67,7 @@
 
     i {
       color: $label-warning-color;
-      margin-right: 15px;
+      margin-right: $default-margin;
     }
 
     span {
