--- a/src/app/shared/components/bd-input/bd-input.component.scss
+++ b/src/app/shared/components/bd-input/bd-input.component.scss
@@ -43,7 +43,7 @@
   overflow: hidden;
   width: 100%;
   height: $form-control-height;
-  padding: 0 17px;
+  padding: 0 $default-margin;
   border-bottom: $border;
   margin-bottom: 0;
   flex-flow: row wrap;
@@ -57,8 +57,8 @@
     color: $label-default-color;
     font-size: $mini-font-size;
     align-self: flex-start;
-    margin-left: -17px;
-    margin-right: 32px;
+    margin-left: -$default-margin;
+    margin-right: $default-margin * 2;
     align-items: center;
     justify-content: flex-end;
 
@@ -88,7 +88,7 @@
       align-items: center;
       justify-content: flex-end;
       flex-grow: 0;
-      margin-right: 15px;
+      margin-right: $default-margin;
     }
 
     .bd-input-infix {
@@ -111,7 +111,7 @@
     .bd-input-suffix {
       @include flex-element;
       flex-grow: 0;
-      margin-left: 15px;
+      margin-left: $default-margin;
     }
   }
 
