--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -75,6 +75,9 @@ $horizontal-scroll-container-height: 43px;
 /* default input height */
 $default-height: 50px;
 
+/* card height */
+$card-height: 92px;
+
 /* form navigation */
 $form-navigation-height: 91px;
 
