--- a/src/app/equipment/components/equipment-card/equipment-card.component.scss
+++ b/src/app/equipment/components/equipment-card/equipment-card.component.scss
@@ -5,8 +5,8 @@
 .equipment-card-section {
   position: relative;
   display: flex;
-  height: 100px;
-  padding: 14px $default-margin;
+  height: $card-height;
+  padding: 10px $default-margin;
   background: inherit;
   font-size: $tiny-font-size;
   line-height: 18px;
@@ -74,7 +74,7 @@
       background: $black;
       color: $white;
       bottom: 3px;
-      border-radius: $form-control-height;
+      border-radius: $default-height;
     }
   }
 }
