--- a/src/app/shared/components/bd-form-typeahead/bd-form-typeahead.component.scss
+++ b/src/app/shared/components/bd-form-typeahead/bd-form-typeahead.component.scss
@@ -15,7 +15,7 @@
     padding: 0;
     margin-top: 0;
     border-bottom-left-radius: $default-border-radius;
-    border-bottom-right-radius: 3$default-border-radius;
+    border-bottom-right-radius: $default-border-radius;
     border-top-left-radius: 0;
     border-top-right-radius: 0;
     border-top: 0;
