--- a/src/app/shared/components/templates/address-item/address-item-template.scss
+++ b/src/app/shared/components/templates/address-item/address-item-template.scss
@@ -6,7 +6,7 @@
   .dropdown-address-item-wrapper {
     display: flex;
     height: 75px;
-    padding: 0 $default-font-size;
+    padding: 0 $default-margin;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
