--- a/src/app/companies/components/company-card/company-card.component.scss
+++ b/src/app/companies/components/company-card/company-card.component.scss
@@ -36,7 +36,7 @@
   .middle {
     display: flex;
     width: 30%;
-    padding-left: 17px;
+    padding-left: $default-margin;
     flex-direction: column;
     justify-content: flex-start;
 
