FSPA-364 changed padding

--- a/src/app/equipment/components/equipment-card/equipment-card.component.scss
+++ b/src/app/equipment/components/equipment-card/equipment-card.component.scss
@@ -24,7 +24,7 @@
   .middle {
     display: flex;
     width: 30%;
-    padding-left: 17px;
+    padding-left: $default-margin;
     flex-direction: column;
     justify-content: flex-start;
 
