--- a/src/app/forms/load-form/load-form.component.scss
+++ b/src/app/forms/load-form/load-form.component.scss
@@ -9,7 +9,7 @@
 .dropdown-company-item-wrapper {
   display: flex;
   height: 75px;
-  padding: 0 17px;
+  padding: 0 $default-margin;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
