FSPA-364 #comment changed bd button compopnent font size

--- a/src/app/shared/components/bd-buttons/bd-button/bd-button.component.scss
+++ b/src/app/shared/components/bd-buttons/bd-button/bd-button.component.scss
@@ -4,6 +4,7 @@
   width: 100%;
   height: $form-control-height;
   border: 0;
+  font-size: $small-font-size;
   border-bottom: $border;
   border-radius: $default-border-radius;
 
