add new font-icons

--- a/src/assets/styles/font-icons.scss
+++ b/src/assets/styles/font-icons.scss
@@ -147,5 +147,16 @@
   &:before {
     content: '\e913';
   }
+}
 
+.icon-call {
+  &:before {
+    content: '\e917';
+  }
+}
+
+.icon-location {
+  &:before {
+    content: '\e919';
+  }
 }
