--- a/src/app/forms/contact-form/contact-form.component.html
+++ b/src/app/forms/contact-form/contact-form.component.html
@@ -3,7 +3,7 @@
   </bd-input>
   <bd-input class="bd-form-control" formControlName="lastName" [labelText]="'Last Name'">
   </bd-input>
-  <bd-input class="bd-form-control" formControlName="personalEmail" [labelText]="'Personal Email'">
+  <bd-input class="bd-form-control" formControlName="email" [labelText]="'Personal Email'">
   </bd-input>
   <bd-input class="bd-form-control" formControlName="position" [labelText]="'Position'">
   </bd-input>
