--- a/src/app/drivers/drivers.html
+++ b/src/app/drivers/drivers.html
@@ -1,6 +1,10 @@
 <multi-pane-layout>
   <first-pane>
-    <driver-cards [selected]="selected" (select)='onSelect($event)' [drivers]="items"></driver-cards>
+    <div>
+      <bd-button class="add-button" [color]="'primary'" [text]="'Add'" (click)="onAdd()">
+      </bd-button>
+      <driver-cards [selected]="selected" (select)='onSelect($event)' [drivers]="items"></driver-cards>
+    </div>
   </first-pane>
   <second-pane>
   </second-pane>
