--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -69,10 +69,10 @@ $top-panel-icon-size: 19px;
   font-family: 'SFUIText-Regular';
   src: ('../assets/fonts/sf-regular.woff');
 }
-/* default input height */
+/* form control height */
 $form-control-height: 40px;
 $horizontal-scroll-container-height: 43px;
-/* default input height */
+/* default height (top-panel, top panel icons container, border-radius)*/
 $default-height: 50px;
 
 /* card height */
