--- a/src/app/drivers/components/driver-detail.component.html
+++ b/src/app/drivers/components/driver-detail.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="selectedItem">
   <form-navigation
     sticky
-    [title]="'Company'"
+    [title]="'Driver'"
     [anchors]="anchors">
   </form-navigation>
   <driver-form
