FSPA-364 #comment code refactoring

--- a/src/app/companies/components/company-card/company-card.component.scss
+++ b/src/app/companies/components/company-card/company-card.component.scss
@@ -23,7 +23,7 @@
       background: $black;
       color: $white;
       font-size: $mini-font-size;
-      border-radius: 50%;
+      border-radius: $circle-radius;
       justify-content: center;
       align-items: center;
     }
@@ -59,7 +59,7 @@
         height: 10px;
         background: $black;
         margin-top: 3px;
-        border-radius: 50%;
+        border-radius: $circle-radius;
       }
 
       .load-name {
@@ -81,7 +81,7 @@
       background: $black;
       color: $white;
       bottom: 3px;
-      border-radius: $default-height;
+      border-radius: $circle-radius;
     }
   }
 }
