--- a/src/app/shared/components/bd-icons/bd-initials-circle/bd-initials-circle.component.scss
+++ b/src/app/shared/components/bd-icons/bd-initials-circle/bd-initials-circle.component.scss
@@ -10,7 +10,7 @@ $circle-diameter: 28px;
   background: $black;
   color: $white;
   font-size: $mini-font-size;
-  border-radius: 50%;
+  border-radius: $circle-radius;
   text-transform: uppercase;
   align-items: center;
   justify-content: center;
