--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -72,8 +72,12 @@ $top-panel-icon-size: 19px;
 /* form control height */
 $form-control-height: 40px;
 $horizontal-scroll-container-height: 43px;
-/* default height (top-panel, top panel icons container, border-radius)*/
-$default-height: 50px;
+
+/* top panel height */
+$top-panel-height: 50px;
+
+/* circle-radius */
+$circle-radius: 50px;
 
 /* card height */
 $card-height: 92px;
