--- a/src/app/drivers/components/driver-card/driver-card.component.scss
+++ b/src/app/drivers/components/driver-card/driver-card.component.scss
@@ -52,7 +52,7 @@
         height: 10px;
         margin: 3px 5px 0 0;
         background: $black;
-        border-radius: 50%;
+        border-radius: $circle-radius;
       }
 
       .tr-city-name {
@@ -76,7 +76,7 @@
       height: 12px;
       background: $black;
       bottom: 3px;
-      border-radius: $default-height;
+      border-radius: $circle-radius;
     }
   }
 }
