--- a/src/app/top-panel/top-panel.component.scss
+++ b/src/app/top-panel/top-panel.component.scss
@@ -29,7 +29,7 @@ input {
     display: flex;
     overflow: hidden;
     width: 57px;
-    height: $default-height;
+    height: $top-panel-height;
     font-size: $top-panel-icon-size;
     cursor: pointer;
     justify-content: center;
