--- a/src/app/forms/driver-form/driver-form.component.html
+++ b/src/app/forms/driver-form/driver-form.component.html
@@ -28,8 +28,8 @@
 		<bd-input class="bd-form-control" formControlName="rate" [labelText]="'Rate'">
 		</bd-input>
 	</bd-form-section>
-	<navigation-anchor id="driver-licence" [isNestedForm]="isNestedForm"></navigation-anchor>
-	<bd-form-section [labelText]="'LICENCE'">
+	<navigation-anchor id="driver-license" [isNestedForm]="isNestedForm"></navigation-anchor>
+	<bd-form-section [labelText]="'LICENSE'">
 		<bd-input class="bd-form-control" formControlName="number" [labelText]="'Number'">
 		</bd-input>
 		<bd-input class="bd-form-control" formControlName="expiration" [labelText]="'Expiration'">
@@ -38,7 +38,7 @@
 		</bd-input>
 		<bd-dropdown class="bd-form-control" [labelText]="'State issued'" formControlName="stateIssued" [items]="states">
 		</bd-dropdown>
-		<bd-dropdown class="bd-form-control" [labelText]="'Class'" formControlName="class" [items]="licenceSlassed">
+		<bd-dropdown class="bd-form-control" [labelText]="'Class'" formControlName="class" [items]="licenseSlassed">
 		</bd-dropdown>
 		<!--TODO: add endorsments and restrictions elements-->
 	</bd-form-section>
