FSPA-359 #comment ui remarks, communicate with designer

--- a/src/app/auth/forms/login-form/login-form.component.scss
+++ b/src/app/auth/forms/login-form/login-form.component.scss
@@ -17,6 +17,7 @@
     text-align: left;
     min-height: 35px;
     align-items: start;
+    border-bottom: $border;
 
     i {
       margin: 2px 15px 0 17px;
