--- a/src/app/auth/components/register/register.component.html
+++ b/src/app/auth/components/register/register.component.html
@@ -2,7 +2,8 @@
   <h3 class="text-center">Sign Up</h3>
   <bd-register-form [viewMode]="formViewMode"></bd-register-form>
   <div class="links-wrapper text-center">
+    <a [routerLink]="['/auth/login']">
     Already registered?
-    <a [routerLink]="['/auth/login']">Login</a>
+    Login</a>
   </div>
 </div>
