--- a/src/app/auth/components/register/register.component.scss
+++ b/src/app/auth/components/register/register.component.scss
@@ -7,11 +7,13 @@
     color: $blue;
     font-size: $large-font-size;
     font-weight: 600;
+    margin-top: 0;
+    margin-bottom: 20px;
   }
 
   .links-wrapper {
     color: $dark-grey;
-    margin-top: 10px;
+    margin-top: 15px;
 
     a {
       color: $dark-grey;
