--- a/src/app/auth/forms/phone-confirmation-form/phone-confirmation-form.component.scss
+++ b/src/app/auth/forms/phone-confirmation-form/phone-confirmation-form.component.scss
@@ -24,6 +24,7 @@
     text-align: left;
     min-height: 35px;
     align-items: start;
+    border-bottom: $border;
 
     i {
       margin: 2px 15px 0 17px;
