--- a/src/app/forms/contact-info-form/contact-info-form.component.html
+++ b/src/app/forms/contact-info-form/contact-info-form.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="contactForm">
+<form [formGroup]="contactInfoForm">
   <bd-input class="bd-form-control" formControlName="info" [labelText]="contactInfo.label">
   </bd-input>
 </form>
