--- a/src/app/forms/contacts-info-form/contacts-info-form.component.html
+++ b/src/app/forms/contacts-info-form/contacts-info-form.component.html
@@ -1,5 +1,5 @@
 <template let-data ngFor [ngForOf]="renderFormData" let-i="index">
-  <div class='bd-form-list-item'>
-   <contact-form [group]='data.group' [contact]='data.item' [addresses]="contactsInfo" [viewMode]="viewMode"></contact-form>
+  <div>
+   <contact-info-form [group]='data.group' [contactInfo]='data.item' [viewMode]="viewMode"></contact-info-form>
  </div>
 </template>
