--- a/src/app/loads/components/load-stop-card/load-stop-card.component.scss
+++ b/src/app/loads/components/load-stop-card/load-stop-card.component.scss
@@ -1,21 +1,6 @@
 @import '../../../../assets/styles/variables';
 
-:host {
-  background: $white;
-
-  &.active,
-  &:hover {
-    background: $light-blue;
-  }
-
-  &.active {
-    .load-stop-card-section {
-      border-bottom-color: $blue;
-    }
-  }
-}
-
-.load-stop-card-section {
+.card-section {
   position: relative;
   height: 100px;
   padding: 17px;
@@ -98,5 +83,22 @@
       color: $blue;
       margin-right: 3px;
     }
+  }
+
+  .status-text {
+    position: absolute;
+    right: 35px;
+    bottom: 13px;
+    justify-content: center;
+  }
+
+  .status {
+    position: absolute;
+    right: 13px;
+    width: 12px;
+    height: 12px;
+    background: $black;
+    bottom: 16px;
+    border-radius: $form-control-height;
   }
 }
