--- a/src/app/drivers/components/driver-card/driver-card.component.scss
+++ b/src/app/drivers/components/driver-card/driver-card.component.scss
@@ -2,7 +2,7 @@
 @import '../../../../assets/styles/styles';
 @import '../../../../assets/styles/mixins';
 
-.driver-card-section {
+.card-section {
   position: relative;
   display: flex;
   height: 100px;
@@ -61,37 +61,22 @@
         text-align: left;
       }
     }
-
-    .status-text {
-      position: absolute;
-      right: 22px;
-      bottom: 0;
-      justify-content: center;
-    }
-
-    .status {
-      position: absolute;
-      right: 0;
-      width: 12px;
-      height: 12px;
-      background: $black;
-      bottom: 3px;
-      border-radius: $form-control-height;
-    }
-  }
-}
-
-:host {
-  background: $white;
-
-  &.active,
-  &:hover {
-    background: $light-blue;
   }
 
-  &.active {
-    .equipment-card-section {
-      border-bottom-color: $blue;
-    }
+  .status-text {
+    position: absolute;
+    right: 35px;
+    bottom: 13px;
+    justify-content: center;
+  }
+
+  .status {
+    position: absolute;
+    right: 13px;
+    width: 12px;
+    height: 12px;
+    background: $black;
+    bottom: 16px;
+    border-radius: $form-control-height;
   }
 }
