--- a/src/app/loads/components/load-view-mode-card/load-view-mode-card.component.scss
+++ b/src/app/loads/components/load-view-mode-card/load-view-mode-card.component.scss
@@ -17,7 +17,7 @@
             flex-direction: column;
             justify-content: space-between;;
             width: 50%;
-            padding: 13px;
+            padding: $default-margin;
             color: $dark-grey;
              .title { 
                  color: $black;
@@ -42,7 +42,7 @@
 
          .date-time-info {
             width: 50%;
-            padding: 13px;
+            padding: $default-margin;
             border-left: 1px dashed $grey;
              .appointment-type {
                  display: flex;
@@ -95,7 +95,7 @@
      }
      .trip-info-container {
          display: flex;
-         padding: 13px;
+         padding: $default-margin;
          border-top: $border;
          flex-direction: row;
          justify-content: space-between;
