FSPA-378 #comment code refactoring

--- a/src/app/companies/components/company-card/company-card.component.html
+++ b/src/app/companies/components/company-card/company-card.component.html
@@ -21,7 +21,7 @@ class="card-section"
       <span class="load-name ellipsis">LD{{load.systemLoadNo}}</span>
     </div>
   </div>
-  <span *ngIf="statusText" [style.color]="companyStatusColor" class="status-text">{{companyStatusText}}</span>
+  <span [style.color]="companyStatusColor" class="status-text">{{companyStatusText}}</span>
   <span
   [style.background]="companyStatusColor"
   class="status">
