--- a/src/app/equipment/components/equipment-card/equipment-card.component.html
+++ b/src/app/equipment/components/equipment-card/equipment-card.component.html
@@ -28,7 +28,7 @@ class="card-section"
         <span class="tr-city-name">{{equipment.lastAddress}}</span>
   </div>
   </div>
-  <span *ngIf="statusText" [style.color]="equipmentStatusColor" class="status-text">{{equipmentStatusText}}</span>
+  <span [style.color]="equipmentStatusColor" class="status-text">{{equipmentStatusText}}</span>
   <span
   [style.background]="equipmentStatusColor"
   class="status">
