--- a/src/app/loads/components/load-stop-card/load-stop-card.component.html
+++ b/src/app/loads/components/load-stop-card/load-stop-card.component.html
@@ -65,7 +65,7 @@
       </span>
     </span>
   </div>
-  <span *ngIf="statusText" [style.color]="loadStatusColor" class="status-text">{{loadStatusText}}</span>
+  <span  [style.color]="loadStatusColor" class="status-text">{{loadStatusText}}</span>
   <span
   [style.background]="loadStatusColor"
   class="status">
