--- a/src/app/drivers/components/driver-card/driver-card.component.scss
+++ b/src/app/drivers/components/driver-card/driver-card.component.scss
@@ -66,6 +66,7 @@
   .status-text {
     position: absolute;
     right: 35px;
+    line-height: 1em;
     bottom: 13px;
     justify-content: center;
   }
@@ -76,7 +77,7 @@
     width: 12px;
     height: 12px;
     background: $black;
-    bottom: 16px;
+    bottom: 13px;
     border-radius: $form-control-height;
   }
 }
