--- a/src/app/equipment/components/equipment-card/equipment-card.component.scss
+++ b/src/app/equipment/components/equipment-card/equipment-card.component.scss
@@ -64,6 +64,7 @@
   .status-text {
     position: absolute;
     right: 35px;
+    line-height: 1em;
     bottom: 13px;
     justify-content: center;
   }
@@ -74,7 +75,7 @@
     width: 12px;
     height: 12px;
     background: $black;
-    bottom: 16px;
+    bottom: 13px;
     border-radius: $form-control-height;
   }
 }
