refactoring, add new settings for default initials icon

--- a/src/app/loads/components/load-view-mode-card/load-view-mode-card.component.html
+++ b/src/app/loads/components/load-view-mode-card/load-view-mode-card.component.html
@@ -49,6 +49,13 @@
     <div class="trip-info-container">
         <div class="info-panel">
             <span class="trip-number">TR3453563 :</span>
+            <span class="initials-circle">
+                <bd-initials-circle
+                    [firstName]="'Nick'"
+                    [lastName]="'Smith'"
+                    size='small'>
+                </bd-initials-circle>
+            </span>
             <span class="driver-name">Nick Smith</span>
         </div>
         <div class="buttons-panel">
