--- a/src/app/forms/address-form/address-form.component.html
+++ b/src/app/forms/address-form/address-form.component.html
@@ -6,7 +6,7 @@
 			</div>
     </div>
 </template>
-<bd-validator [component]="addressForm.controls.name" [errorDefs]="{required: 'Name is required'}">
+<bd-validator *ngIf="isNameFieldVisible" [component]="addressForm.controls.name" [errorDefs]="{required: 'Name is required'}">
   <bd-input class="bd-form-control" formControlName="name" placeholder="Name">
   </bd-input>
 </bd-validator>
@@ -54,18 +54,4 @@
 			</google-map>
 		</div>
 	</div>
-  	<bd-validator [component]="addressForm.controls.phone" [errorDefs]="{required: 'Phone is required'}">
-      <div class="section">
-        <bd-input class="bd-form-control left-control left-side" [labelText]="'Phone'" formControlName="phone">
-        </bd-input>
-        <bd-input class="bd-form-control right-control right-side" placeholder="Extension" formControlName="phoneExtension">
-        </bd-input>
-    	</div>
-    </bd-validator>
-    <div class="section">
-			<bd-input class="bd-form-control left-control left-side" [labelText]="'Fax'" *ngIf='isExpanded' formControlName="fax">
-			</bd-input>
-			<bd-input class="bd-form-control right-control right-side" placeholder="Extension" formControlName="faxExtension" *ngIf='isExpanded'>
-			</bd-input>
-    </div>
 </form>
