--- a/src/app/shared/components/bd-checkboxes/bd-checkboxes.component.scss
+++ b/src/app/shared/components/bd-checkboxes/bd-checkboxes.component.scss
@@ -1,25 +1,25 @@
 @import '../../../../assets/styles/variables';
 
 .bd-checkboxes {
-  display: flex;
-  align-items: center;
-  flex-direction: row;
   position: relative;
+  display: flex;
   overflow: hidden;
   width: 100%;
-  min-height: 50px;
-  padding: 0 17px;
-  border-bottom: 1px solid #d7d8db;
+  padding: 0 $default-margin;
+  align-items: center;
+  flex-direction: row;
+  min-height: $form-control-height;
+  border-bottom: 1px solid $grey;
   margin-bottom: 0;
   background-color: inherit;
   box-shadow: inherit;
 
   .bd-label {
     display: flex;
+    height: $form-control-height;
+    color: $dark-grey;
+    font-size: $mini-font-size;
     min-width: 80px;
-    height: 50px;
-    color: #b3b2b2;
-    font-size: 10px;
     font-weight: 300;
     text-transform: uppercase;
     align-self: flex-start;
